pkg/gox/testdata/errors/qualified_mismatched.gox
package demo

import ui "github.com/example/app/internal/ui"

func View() any {
	return <ui.Shell></ui.Card>
}
